--- a/lazy_ilya/file_creator/templates/file_creator/file_creator.html
+++ b/lazy_ilya/file_creator/templates/file_creator/file_creator.html
@@ -105,8 +105,7 @@
                     (.doc, .docx, .rtf)</label>
                 <input type="file" name="files" id="files" accept=".doc,.docx,.rtf" multiple
                        class="correct_input">
-                <p id="files-error" class="hidden error_message">Пожалуйста, выберите хотя бы один
-                    файл или файлы с верным расширением</p>
+                <p id="files-error" class="hidden error_message">Выберите хотя бы один файл или файлы с верным расширением</p>
                 <!-- Контейнер для отображения выбранных файлов -->
                 <ul id="file-list" class="mt-2 text-sm text-text dark:text-text-dark list-disc"></ul>
 
