Разработка формы обновления записей городов

--- a/lazy_ilya/file_creator/templates/file_creator/base.html
+++ b/lazy_ilya/file_creator/templates/file_creator/base.html
@@ -44,7 +44,7 @@
                    class="a-style" tabindex="-1">Главная</a>
                 <a id="a-cities" href="{% url 'cities:base_template' %}"
                    class="a-style" tabindex="-1">Города</a>
-                <a href="#"
+                <a id="a-statistics" href="{% url 'statistics_app:statistics_app' %}"
                    class="a-style" tabindex="-1">Статистика</a>
                 {% if user.is_superuser or user|in_group:"admin" %}
                     <a href="{% url 'cities:admin_city' %}"
@@ -95,7 +95,7 @@
                class="burger-button" tabindex="-1">Главная</a>
             <a id="a-cities-mob" href="{% url 'cities:base_template' %}"
                class="burger-button" tabindex="-1">Города</a>
-            <a href="#"
+            <a id="a-statistics-mob" href="{% url 'statistics_app:statistics_app' %}"
                class="burger-button" tabindex="-1">Статистика</a>
             {% if user.is_superuser or user|in_group:"admin" %}
                 <a id="a-admin-mob" href="{% url 'cities:admin_city' %}"
