--- a/lazy_ilya/statistics_app/templates/statistics_app/statistics_app.html
+++ b/lazy_ilya/statistics_app/templates/statistics_app/statistics_app.html
@@ -7,12 +7,12 @@
 
 {% block body %}
 
-    <div class="max-w-6xl mx-auto p-6">
+    <div class="max-w-full mx-auto p-6 border-b-2 border-b-accent">
         <h2 class="mb-6 text-center">Статистика обработки файлов</h2>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 ">
+        <div class="grid grid-cols-1 lg:grid-cols-3 lg:max-w-4xl mx-auto gap-3 pb-3 ">
             <!-- Карточка: Обработано файлов -->
-            <div class="aspect-square bg-form-color dark:bg-form-color-dark shadow-xl rounded-xl p-6 flex flex-col justify-around border border-accent dark:border-accent-dark hover:scale-105 transition-all duration-500">
+            <div class="stat-card">
                 <div>
                     <h3 class="text-center text-text dark:text-text-dark">Обработано файлов</h3>
                 </div>
@@ -21,34 +21,35 @@
                 </div>
             </div>
             <!-- Карточка: Самый продуктивный день -->
-            <div class="aspect-square bg-form-color dark:bg-form-color-dark shadow-xl rounded-xl p-6 flex flex-col justify-around border border-accent dark:border-accent-dark hover:scale-105 transition-all duration-500">
+            <div class="stat-card">
                 <div>
                     <h3 class="text-center text-text dark:text-text-dark">Самый тяжелый день</h3>
                 </div>
                 <div class="mt-4 space-y-3">
                     <!-- Самый тяжелый день — только число -->
                     {% if best_day %}
-                    <p class="!text-2xl text-success dark:text-success-dark font-medium text-center">
-                        {{ best_day|date:"d.m.Y" }}
-                    </p>
-                    <p class="!text-4xl font-bold text-primary dark:text-primary-dark text-center">
-                        <span class="count-up" data-target="{{ best_day_total }}">0</span>
-                    </p>
+                        <p class="!text-2xl text-success dark:text-success-dark font-medium text-center">
+                            {{ best_day|date:"d.m.Y" }}
+                        </p>
+                        <p class="!text-4xl font-bold text-primary dark:text-primary-dark text-center">
+                            <span class="count-up" data-target="{{ best_day_total }}">0</span>
+                        </p>
                     {% else %}
-                    <p class="text-secondary dark:text-secondary-dark text-center">Нет данных</p>
+                        <p class="text-secondary dark:text-secondary-dark text-center">Нет данных</p>
                     {% endif %}
                 </div>
 
             </div>
 
             <!-- Карточка: Сэкономлено времени -->
-            <div class="aspect-square bg-form-color dark:bg-form-color-dark shadow-xl rounded-xl p-6 flex flex-col justify-around border border-accent dark:border-accent-dark hover:scale-105 transition-all duration-500">
+            <div class="stat-card">
                 <div>
                     <h3 class="text-center text-text dark:text-text-dark">Сэкономлено времени</h3>
                 </div>
                 <div class="text-4xl font-bold text-primary dark:text-primary-dark mt-4 text-center">
+                    <p class="!text-2xl text-success dark:text-success-dark font-medium text-center">Выпито кружек ☕</p>
                     <span class="count-up" data-target="{{ coffee_cups }}">0</span>
-                    круж{{ coffee_cups|pluralize:"ка,ки,ек" }} кофе ☕
+
                 </div>
             </div>
 
