--- a/lazy_ilya/file_creator/templates/file_creator/base.html
+++ b/lazy_ilya/file_creator/templates/file_creator/base.html
@@ -114,23 +114,17 @@
 
     </nav>
 </header>
-<!-- Элемент с иконкой загрузки (крутящийся логотип) -->
-<div id="loader"
-     class="loader">
-    <img src="
-{% if VITE_DEV_MODE %}
-http://localhost:5173/src/file_creator/img/file_creator_eating.ico
-{% else %}
-{% static 'file_creator/img/file_creator_eating.ico' %}
-{% endif %}"
-         alt="Loading Logo" class="w-50 h-50 animate-bounce">
-</div>
+{% block loader %}
+
+{% endblock %}
+
 <!-- Навигация -->
 <main class="p-5">
 
     {% block body %}
         Base Body
     {% endblock %}
+
 </main>
 
 
