--- a/lazy_ilya/myauth/templates/myauth/registration.html
+++ b/lazy_ilya/myauth/templates/myauth/registration.html
@@ -141,10 +141,11 @@
                                     group-hover:opacity-100 group-hover:pointer-events-auto
                                     transition-opacity duration-300 z-10">
                                 Номер телефона нужен для восстановления пароля.
-                                Это не обязательно ваш реальный номер,
-                                но в случае если вы забыли пароль,
+                                Это <span class="text-accent dark:text-accent-dark">Обязательно</span>
+                                ваш реальный номер из схемы оповещения и в случае если вы забыли пароль,
                                 то нужно будет для восстановления указать ваш логин и
-                                пароль для сброса и установки нового пароля!
+                                номер телефона. Пароль для сброса и установки нового пароля
+                                требования те же как и при регистрации!
                                 <span class="text-accent dark:text-accent-dark">!!!СМС на ваш номер не пришлют!!!</span>
                             </div>
                         </div>
