апдейт кода стикеров

--- a/lazy_ilya/stickers/templates/stickers/stickers.html
+++ b/lazy_ilya/stickers/templates/stickers/stickers.html
@@ -83,13 +83,15 @@
         <script type="module" crossorigin src="{% static 'stickers/js/start.js' %}"></script>
     {% endif %}
     <script>
-
-        window.username = "{{ user.username|default:user.first_name }}"
+        {% if user.first_name %}
+            window.username = "{{ user.first_name }}";
+        {% elif user.username %}
+            window.username = "{{ user.username }}";
+        {% else %}
+            window.username = "Гость";
+        {% endif %}
         window.notes_data = JSON.parse('{{ notes_data|escapejs }}')
         window.username_data = JSON.parse('{{ username_list|escapejs }}')
-        console.log(username)
-        console.log(notes_data)
-        console.log(username_data)
     </script>
 
 {% endblock %}
