--- a/lazy_ilya/frontend/src/css/base.css
+++ b/lazy_ilya/frontend/src/css/base.css
@@ -443,7 +443,7 @@ p {
 .note-card {
     @apply absolute flex flex-col p-4 rounded-xl shadow-md cursor-text
     select-text w-full max-w-[350px]  max-h-[1000px] duration-500 overflow-y-auto
-    transition-shadow outline-none resize min-h-[200px];
+    transition-shadow outline-none resize min-h-[200px] scale-50 md:scale-75 xl:scale-100 transition-transform;
     /*transform: rotate(calc(-2deg + 4deg * var(--random)));*/
     /*--random: 0;*/
     /*overflow: auto;*/
@@ -477,8 +477,9 @@ p {
 .task-card {
     @apply max-h-[250px] overflow-y-auto;
 }
-.author-btn{
-    @apply  bg-accent text-text text-sm font-medium mr-3 px-4 py-0.5 rounded-sm dark:bg-accent-dark dark:text-text-dark cursor-pointer
+
+.author-btn {
+    @apply bg-accent text-text text-sm font-medium mr-3 px-4 py-0.5 rounded-sm dark:bg-accent-dark dark:text-text-dark cursor-pointer
 }
 
 
