апдейт кода стикеров

--- a/lazy_ilya/file_creator/templates/file_creator/base.html
+++ b/lazy_ilya/file_creator/templates/file_creator/base.html
@@ -39,7 +39,7 @@
             </div>
 
             <!-- Меню (десктоп) -->
-            <div class="hidden lg:flex items-center gap-2">
+            <div class="hidden lg:flex items-center gap-0.5 scale-75 xl:scale-100 xl:gap-2 transition-all duration-500">
                 <a id="a-main" href="{% url 'file_creator:file-creator-start' %}"
                    class="a-style" tabindex="-1">Главная</a>
                 <a id="a-stickers" href="{% url 'stickers:stickers' %}"
