--- a/lazy_ilya/frontend/src/css/base.css
+++ b/lazy_ilya/frontend/src/css/base.css
@@ -78,18 +78,18 @@
 
 }
 h1 {
-    @apply text-xl md:text-3xl font-logo text-center font-extrabold tracking-widest
+    @apply text-xl md:text-2xl  xl:text-3xl font-logo text-center font-extrabold tracking-widest
     bg-gradient-to-r from-[#FF6B00] to-[#DA00FF]
     bg-clip-text text-transparent;
 }
 
 h2 {
-    @apply text-lg md:text-2xl font-bold
+    @apply text-lg md:text-xl xl:text-2xl font-bold
     text-accent dark:text-accent-dark;
 }
 
 h3 {
-    @apply text-sm md:text-xl  font-semibold;
+    @apply text-sm md:text-lg xl:text-xl  font-semibold;
 }
 
 p {
